Maquete y le aplique estilos la pagina de blogs y modifique texto en el index

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="https://twitter.com/armandochindoy"><i class="flaticon-002-twitter"></i></a>
                 <a href="https://www.instagram.com/armandochindoy/"><i class="flaticon-011-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/armando-chindoy-76565b185/"><i class="flaticon-010-linkedin"></i></a>
-                <a href=""><i class="flaticon-008-youtube"></i></a>
+                <a href="https://www.linkedin.com/in/armando-chindoy-76565b185/"><i class="flaticon-008-youtube"></i></a>
             </div>
         </section>
         <nav>
@@ -30,17 +30,15 @@
             <div class="about"><a href="">About me</a></div>
         </nav>
     </header>
-    <main>
-        <section>
-            <div class="home-title-container">
-                <p>Conoceme y mira lo que puedo hacer</p>
-            </div>
-        </section>
-        <section>
-            <div class="home-button-container">
-                <a href="blogs.html">Proyectos</a>
-            </div>
-        </section>
+    <main class="home-main">
+        <div class="home-title-container">
+            <p>Meet me to know the things i can do</p>
+        </div>
+
+
+        <div class="home-button-container">
+            <a href="blogs.html">Proyects</a>
+        </div>
     </main>
 </body>
 
