Maquete y le aplique estilos la pagina de blogs y modifique texto en el index

--- a/blogs.html
+++ b/blogs.html
@@ -18,7 +18,6 @@
                 <a href="https://twitter.com/armandochindoy"><i class="flaticon-002-twitter"></i></a>
                 <a href="https://www.instagram.com/armandochindoy/"><i class="flaticon-011-instagram"></i></a>
                 <a href="https://www.linkedin.com/in/armando-chindoy-76565b185/"><i class="flaticon-010-linkedin"></i></a>
-                <a href=""><i class="flaticon-008-youtube"></i></a>
             </div>
         </section>
         <nav>
@@ -30,6 +29,82 @@
             <div class="about"><a href="">About me</a></div>
         </nav>
     </header>
+    <main>
+        <section class="hero">
+            <div class="hero-image">
+                <h3>Titulo</h3>
+                <figure><img src="assets/img/fondo_home.jpg" alt="imagen de proyecto"></figure>
+            </div>
+            <article class="hero-text">
+                <h2>Title</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit vitae ipsam, quidem nostrum possimus ad quaerat sit eveniet impedit aut delectus placeat, eligendi temporibus minus voluptatem, sint expedita at laboriosam.</p>
+                <a href="">Leer mas div</a>
+            </article>
+
+        </section>
+        <section class="proyects">
+            <div class="titile-container">
+                <h3>Lastest Proyects</h3>
+            </div>
+            <section class="proyects-container">
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+                <article class="proyect">
+                    <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
+                    <h3>Proyecto Title</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
+                    <a href="">See more</a>
+                </article>
+
+            </section>
+        </section>
+    </main>
+    <footer>
+        <span></span>
+        <div class="fotter">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus amet voluptatum eos illum necessitatibus aspernatur aut autem quo, veniam placeat in deserunt provident nam explicabo voluptatem molestias sed nulla iure!</p>
+        </div>
+    </footer>
 </body>
 
 </html>
