I added iconmoon fonts, i made the blog's layout and a made a change the fonts directories routes

--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/fonts/flaticon.css">
+    <link rel="stylesheet" href="css/fonts/flaticon/flaticon.css">
+    <link rel="stylesheet" href="css/fonts/iconmoon/style.css">
     <link rel="shortcut icon" href="assets/img/icon.png" type="image/x-icon">
     <title>Armando Chindoy</title>
 </head>
@@ -38,8 +39,11 @@
             <article class="hero-text">
                 <h2>Title</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Velit vitae ipsam, quidem nostrum possimus ad quaerat sit eveniet impedit aut delectus placeat, eligendi temporibus minus voluptatem, sint expedita at laboriosam.</p>
+                <span>
+                    <a href="">Leer mas</a>
+                    <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                </span>
 
-                <a href="">Leer mas</a>
             </article>
 
         </section>
@@ -52,49 +56,73 @@
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
                 <article class="proyect">
                     <figure><img src="assets/img/fondo_home.jpg" alt="Imagen del proyecto 1"></figure>
                     <h3>Proyecto Title</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum aperiam expedita quas possimus totam numquam corrupti deleniti obcaecati id, perferendis quae est architecto voluptatem. Aliquid nulla voluptatibus mollitia ipsam ducimus.</p>
-                    <a href="">See more</a>
+                    <span>
+                        <a href="blog.html">See more</a>
+                        <a href="https://armandochindoy.github.io/google_clone/">Ver proyecto</a>
+                    </span>
                 </article>
 
             </section>
