--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/fonts/flaticon.css">
+    <link rel="stylesheet" href="css/fonts/flaticon/flaticon.css">
+    <link rel="stylesheet" href="css/fonts/iconmoon/style.css">
     <link rel="shortcut icon" href="assets/img/icon.png" type="image/x-icon">
     <title>Armando Chindoy</title>
 </head>
